--- a/curso-typescript/index.html
+++ b/curso-typescript/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="introducao/basico.js"></script>
-    <script src="tipos/tipos.js"></script>
+    <!--<script src="introducao/basico.js"></script>\
+    <script src="tipos/tipos.js"></script>-->
+    <script src="../javascript/exerciciosBRQ/chuteUmNumero.js"></script>
+
 </body>
 </html>
