--- a/projetos/index.html
+++ b/projetos/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
   <!--<script src="desafio1.js"></script>-->
-  <script src="desafio2.js"></script>
+  <script src="simuladorInvestimento.js"></script>
 </body>
 </html>
